--- a/index.css
+++ b/index.css
@@ -51,21 +51,6 @@ body,h6,h3,h2,h4,h5 {
     color: black;
 }
   
-.topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-}
-  
-.topnav-centered  {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-  
-.topnav-right {
-    float: right;
-}
   
 .title{
     font-family: 'Reggae One', cursive;
@@ -112,11 +97,35 @@ body,h6,h3,h2,h4,h5 {
     padding: 10px;
 }
 
+.main_view img{ 
+    position: relative;
+    width: 35%; 
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-bottom: 30px;
+    margin-top: 25px; 
+} 
+.side_view{ 
+    display: flex; 
+    justify-content: center; 
+     
+} 
+.side_view img{ 
+    float: left;
+    width: 16.66%;
+    padding: 10px; 
+    position: relative;
+    cursor: pointer; 
+     
+} 
 
 
 .topnav {
     overflow: hidden;
     background-color: #333;
+    top: 0;
+    width: 100%;
   }
   
   .topnav a {
@@ -141,6 +150,31 @@ body,h6,h3,h2,h4,h5 {
   
   .topnav .icon {
     display: none;
+  }
+
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  
+  input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
   }
   
   @media screen and (max-width: 600px) {
