--- a/index.css
+++ b/index.css
@@ -52,31 +52,31 @@ body,h6,h3,h2,h4,h5 {
 
     .bg_img-h{
         position: absolute;
-        height: 150%;
+        height: 150vh;
         width: 100%;
     }
     
     .bg_img-f{
         position: absolute;
-        height: 250%;
+        height: 250vh;
         width: 100%;
     }
     
     .bg_img-d{
         position: absolute;
-        height: 170%;
+        height: 170vh;
         width: 100%;
     }
     
     .bg_img-g{
         position: absolute;
-        height: 100%;
+        height: 100vh;
         width: 100%;
     }
     
     .bg_img-e{
         position: absolute;
-        height: 135%;
+        height: 135vh;
         width: 100%;
     }
     
